--- a/index.html
+++ b/index.html
@@ -47,35 +47,51 @@
         </div>
     </nav>
     <main class="mainIndex"> 
-        <div class="img__principal">
-            <h1>TODO LO QUE NECESITAS</h1>
-        </div> 
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner imgCarrusel">
+                <div class="carousel-item active">
+                    <img src="./asset/image/img1.jpg" class="d-block w-100" alt="auriulares">
+                </div>
+                <div class="carousel-item">
+                    <img src="./asset/image/img2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./asset/image/img3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./asset/image/img4.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./asset/image/img5.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+        </div>
         <h2 class="texto25años">25 AÑOS DE EXPERIENCIA</h2>
     </main>
     <section class="sectionIndex">
-        <div class="contenedor__tarjetas">
-            <div class="card">
+        <div class="contenedor__tarjetas row justify-content-evenly">
+            <div class="card m-4 col-xl-2 col-lg-4 col-8">
                 <img class="card__img" src="./asset/image/music.png" alt="icono_de_musica">
                 <div class="card__info">
                     <h3 class="card__info--titulo">SONIDO</h3>
                     <p>Contamos con sistemas de sonido para todo tipo de eventos.</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card m-4 col-xl-2 col-lg-4 col-8">
                 <img class="card__img" src="./asset/image/luces.png" alt="icono_de_luces">
                 <div class="card__info">
                     <h3 class="card__info--titulo">ILUMINACION</h3>
                     <p> Nuestra iluminacion LED brinda el mejor rendimiento y versatilidad, creando ambientaciones con colores brillantes y personalizados.</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card m-4 col-xl-2 col-lg-4 col-8">
                 <img class="card__img" src="./asset/image/altoparlante.png" alt="icono_de_alquiler">
                 <div class="card__info">
                     <h3 class="card__info--titulo">ALQUILER DE EQUIPOS</h3>
-                    <p>Brindamos soluciones rápidas, confiables y accesibles. Disponemos de primeras marcas y la logística necesaria para que todo lo que necesites llegue en tiempo y forma a tu evento.</p>
+                    <p>Brindamos soluciones rápidas, confiables y accesibles.</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card m-4 col-xl-2 col-lg-4 col-8">
                 <img class="card__img" src="./asset/image/conversacion.png" alt="icono_de_asesoramiento">
                 <div class="card__info">
                     <h3 class="card__info--titulo">ASESORAMIENTO</h3>
