--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>INICIO - BEATSOUND</title>
 </head>
-<body class="contenedorIndex">
+<body>
     <nav class="navbar navbar-expand-lg header">
         <div class="container-fluid ">
             <a class="navbar-brand col-4" href="./index.html"><img class="logo" data-aos="fade-right" data-aos-duration="3000"data-aos-delay="300"  src="./asset/image/logo.png" alt="beat sound"></a>
@@ -25,19 +25,19 @@
                         <a class="nav-link activar" aria-current="page" href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
+                        <a class="nav-link dropdown-toggle" href="./pages/servicios.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
                         <ul class="dropdown-menu desplegable text-center" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Eventos Empresariales</a></li>
-                            <li><a class="dropdown-item" href="#">Eventos Sociales</a></li>
-                            <li><a class="dropdown-item" href="#">Show en vivo</a></li>
-                            <li><a class="dropdown-item" href="#">Alquiler de Equipos</a></li>
+                            <li><a class="dropdown-item" href="./pages/servicios.html">Eventos Empresariales</a></li>
+                            <li><a class="dropdown-item" href="./pages/servicios.html#sociales">Eventos Sociales</a></li>
+                            <li><a class="dropdown-item" href="./pages/servicios.html#shows">Show en vivo</a></li>
+                            <li><a class="dropdown-item" href="./pages/servicios.html#equipos">Alquiler de Equipos</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Galeria</a>
+                        <a class="nav-link" href="./pages/galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contactos</a>
@@ -46,7 +46,7 @@
             </div>
         </div>
     </nav>
-    <main class="mainIndex"> 
+    <main class="container-fluid"> 
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner imgCarrusel">
                 <div class="carousel-item active">
@@ -100,7 +100,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
+    <footer>
         <div class="contactos__footer">
             <p>Llamanos </p>
             <p>222-3333-44556</p>
