arme las 5 paginas con maquetado bootstrap

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -40,7 +40,7 @@
                         <a class="nav-link activar" href="./nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contactos</a>
+                        <a class="nav-link" href="./contacto.html">Contactos</a>
                     </li>
                 </ul>
             </div>
@@ -49,13 +49,13 @@
     <main class=" container-fluid">
         <div class="contenedorNosotros row justify-content-center">
             <div class="infoNosotros col-8 my-3 ">
-                <h1 class="tituloNosotros text-center">Beat Sound family</h1>
+                <h1 class="tituloNosotros text-center">Beat Sound Family</h1>
                 <p class="parrafoNosotros">Contamos con un equipamiento ideal entre los cuales destacamos no solamente el talento humano, sino además la calidad y eficiencia de cada uno de nuestros equipos de primera línea con los cuales podemos ambientar todo tipo de espacios.
                 Beat Sound se especializa en atender cualquier tipo de evento, desde fiestas, desfiles de moda, congresos y presentaciones publicitarias, hasta exposiciones, entregas de premios, ferias y conferencias, por lo que nuestra experiencia es comprobable, además de muy variada.
                 </p>
             </div>
         </div>
-        <div class="contenedorCaras row justify-content-evenly">
+        <div class="contenedorCaras row justify-content-sm-evenly justify-content-star">
             <div class="imgCaras col-8 col-md-5 col-lg-4">
                 <img src="../asset/image/gerente.png" alt="Martina Grifton">
                 <div class="carasInfo">
@@ -63,28 +63,28 @@
                     <p class="infoPersonas"> Gerente General</p>
                 </div>
             </div>
-            <div class="imgCaras col-8 col-md-5 col-lg-4">
+            <div class="imgCaras col-7 col-md-5 col-lg-4">
                 <img src="../asset/image/RRPP.png" alt="Lucas Thomson">
                 <div class="carasInfo">
                     <h3 class="nombresNosotros">Lucas Thomson</h3>
                     <p class="infoPersonas"> Relaciones Publicas</p>
                 </div>
             </div>
-            <div class="imgCaras col-8 col-md-5 col-lg-4">
+            <div class="imgCaras col-7 col-md-5 col-lg-4">
                 <img src="../asset/image/ventas.png" alt="Valeria Pintos">
                 <div class="carasInfo">
                     <h3 class="nombresNosotros">Valeria Pintos</h3>
                     <p class="infoPersonas"> Ventas</p>
                 </div>
             </div>
-            <div class="imgCaras col-8 col-md-5 col-lg-4">
+            <div class="imgCaras col-7 col-md-5 col-lg-4">
                 <img src="../asset/image/logistica.png" alt="David Lopez">
                 <div class="carasInfo">
                     <h3 class="nombresNosotros">David Lopez</h3>
                     <p class="infoPersonas"> Logistica</p>
                 </div>
             </div>
-            <div class="imgCaras col-8 col-md-5 col-lg-4">
+            <div class="imgCaras col-7 col-md-5 col-lg-4">
                 <img src="../asset/image/Sonidista.png" alt="Fabian Gomez">
                 <div class="carasInfo">
                     <h3 class="nombresNosotros">Fabian Gomez</h3>
