--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./asset/image/icono.ico">
     <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- CSS personal -->
     <link rel="stylesheet" href="../asset/css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>GALERIA - BEATSOUND</title>
+    <link rel="icon" href="./asset/image/icono.ico">
+    <title>NOSOTROS - BEATSOUND</title>
 </head>
-<body class="contenedorIndex">
+<body>
     <nav class="navbar navbar-expand-lg header">
         <div class="container-fluid ">
             <a class="navbar-brand col-4" href="../index.html"><img class="logo" data-aos="fade-right" data-aos-duration="3000"data-aos-delay="300"  src="../asset/image/logo.png" alt="beat sound"></a>
@@ -34,41 +34,46 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link activar" href="./galeria.html">Galeria</a>
+                        <a class="nav-link " href="./galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">Contactos</a>
+                        <a class="nav-link activar" href="./contacto.html">Contactos</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <main class="container-fluid">
-        <h1 class="tituloGaleria text-center m-4">Una imagen vale mas que mil palabras</h1>
-        <p class="infoGaleria">
-            Nuestra trayectoria de 25 años nos a permitido ser parte de grandes Momentos.
-        </p>
-        <div class="galeria row justify-content-center ">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/001.jpg" alt="evento_social">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/002.jpg" alt="iluminacion_fiesta">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/003.jpg" alt="evento_empresarial">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/004.jpg" alt="evento_corporativo">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/005.jpg" alt="consola_de_sonido">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/006.jpg" alt="fiesta_boliche">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/007.jpg" alt="equipamiento_sonido">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/008.jpg" alt="evento_boliche">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/009.jpg" alt="fiesta_noche">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/010.jpg" alt="Luces_ evento">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/011.jpg" alt="evento_corporativo">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/012.jpg" alt="recital en vivo">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/013.jpg" alt="evento_boliche">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/014.jpg" alt="recital">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/015.jpg" alt="Iluminacion en boliche">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/016.jpg" alt="dj evento">
-    </main>
+    <main>
+        <div class="contenedorContactos row justify-content-evenly">
+            <form class="formulario m-4 col-8  col-lg-5 row justify-content-evenly">
+                <img src="../asset/image/mail.png" alt="logo mail">
+                <input class="formBox col-10 col-lg-10 m-1 p-1 " type="text" name="nombre" placeholder="Escriba su Nombre" required>
+                <input class="formBox col-10 col-lg-10 m-1 p-1" type="email" name="mail" placeholder=" Escriba su E-mail" required>
+                <input class="formBox col-10 col-lg-10 m-1 p-1" type="text" placeholder="Asunto">
+                <textarea class="formBox col-10 col-lg-10 m-1 p-1" name="text" placeholder="Escriba su consulta"></textarea required>
+                <input class="formBox col-10 col-lg-10 m-1 p-1" type="submit" value="Enviar">
+            </form>
+            <div class="infoContactos col-10 col-lg-5 row align-items-center">
+                <h2 class="tituloContactos text-center my-5">CONSULTANOS SIN COMPROMISO</h2>
+                <p>Queremos brindarte el mejor servicio, por eso contamos con equipos de calidad y la mejor logística</p>
+                <div class="parrafoContactos my-3">
+                    <p >LLAMANOS AL TELEFONO:</p>
+                    <p>222-3333-44556</p>
+                </div>
+                <div class="parrafoContactos my-3">
+                    <p>O ESCRIBINOS UN MAIL A:</p>
+                    <p>info@info.com.ar</p>
+                </div>
+                <div class="parrafoContactos my-3">
+                    <p>HORARIO DE ATENCION</p>
+                    <p>Lunes a Viernes de 9hs a 18hs - Sabados de 9hs a 13hs </p>
+                </div>
+            </div> 
+        </div>
+    </main>    
     <footer class="footer">
         <div class="contactos__footer">
             <p>Llamanos </p>
