--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="./nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contactos</a>
+                        <a class="nav-link" href="./contacto.html">Contactos</a>
                     </li>
                 </ul>
             </div>
