--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./asset/image/icono.ico">
+    <link rel="shortcut icon" href="./asset/image/logoico.jpg" type="image/x-icon">
     <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- CSS personal -->
@@ -53,16 +53,16 @@
                     <img src="./asset/image/img1.jpg" class="d-block w-100" alt="auriulares">
                 </div>
                 <div class="carousel-item">
-                    <img src="./asset/image/img2.jpg" class="d-block w-100" alt="...">
+                    <img src="./asset/image/img2.jpg" class="d-block w-100" alt="fiesta">
                 </div>
                 <div class="carousel-item">
-                    <img src="./asset/image/img3.jpg" class="d-block w-100" alt="...">
+                    <img src="./asset/image/img3.jpg" class="d-block w-100" alt="microfono">
                 </div>
                 <div class="carousel-item">
-                    <img src="./asset/image/img4.jpg" class="d-block w-100" alt="...">
+                    <img src="./asset/image/img4.jpg" class="d-block w-100" alt="fiesta en show en vivo">
                 </div>
                 <div class="carousel-item">
-                    <img src="./asset/image/img5.jpg" class="d-block w-100" alt="...">
+                    <img src="./asset/image/img5.jpg" class="d-block w-100" alt="dj">
                 </div>
             </div>
         </div>
