Corregi todos los atributos alt de las imagenes

--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
     <section class="sectionIndex">
         <div class="contenedor__tarjetas row justify-content-evenly">
             <div class="card m-4 col-xl-2 col-lg-4 col-8">
-                <img class="card__img" src="./asset/image/music.png" alt="icono_de_musica">
+                <img class="card__img" src="./asset/image/music.png" alt="icono de musica">
                 <div class="card__info">
                     <h3 class="card__info--titulo">SONIDO</h3>
                     <p>Contamos con sistemas de sonido para todo tipo de eventos.</p>
                 </div>
             </div>
             <div class="card m-4 col-xl-2 col-lg-4 col-8">
-                <img class="card__img" src="./asset/image/luces.png" alt="icono_de_luces">
+                <img class="card__img" src="./asset/image/luces.png" alt="icono de luces">
                 <div class="card__info">
                     <h3 class="card__info--titulo">ILUMINACION</h3>
                     <p> Nuestra iluminacion LED brinda el mejor rendimiento y versatilidad, creando ambientaciones con colores brillantes y personalizados.</p>
                 </div>
             </div>
             <div class="card m-4 col-xl-2 col-lg-4 col-8">
-                <img class="card__img" src="./asset/image/altoparlante.png" alt="icono_de_alquiler">
+                <img class="card__img" src="./asset/image/altoparlante.png" alt="icono de alquiler">
                 <div class="card__info">
                     <h3 class="card__info--titulo">ALQUILER DE EQUIPOS</h3>
                     <p>Brindamos soluciones rápidas, confiables y accesibles.</p>
                 </div>
             </div>
             <div class="card m-4 col-xl-2 col-lg-4 col-8">
-                <img class="card__img" src="./asset/image/conversacion.png" alt="icono_de_asesoramiento">
+                <img class="card__img" src="./asset/image/conversacion.png" alt="icono de asesoramiento">
                 <div class="card__info">
                     <h3 class="card__info--titulo">ASESORAMIENTO</h3>
                     <p>Contamos con el asesoramiento técnico de profesionales calificados en sonido e iluminación. Te ayudamos a diseñar tu evento y definir qué tipo de equipamiento necesitás para que sea exitoso </p>
@@ -113,9 +113,9 @@
         <div class="redes__footer">
             <h3>Seguinos</h3>
             <ul>
-                <li><a href="#">Facebook<img src="./asset/image/facebook.png" alt="logo_Facebook"></a></li>
-                <li><a href="#">Instagram<img src="./asset/image/instagram.png" alt="logo_Instagram"></a></li>
-                <li><a href="#">Linkedin<img src="./asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
+                <li><a href="#">Facebook<img src="./asset/image/facebook.png" alt="logo Facebook"></a></li>
+                <li><a href="#">Instagram<img src="./asset/image/instagram.png" alt="logo Instagram"></a></li>
+                <li><a href="#">Linkedin<img src="./asset/image/linkedin.png" alt="logo Linkedin"></a></li>
             </ul>
         </div>
     </footer>
