--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -52,19 +52,19 @@
             Nuestra trayectoria de 25 años nos a permitido ser parte de grandes Momentos.
         </p>
         <div class="galeria row justify-content-center ">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/001.jpg" alt="evento_social">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/002.jpg" alt="iluminacion_fiesta">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/003.jpg" alt="evento_empresarial">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/004.jpg" alt="evento_corporativo">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/005.jpg" alt="consola_de_sonido">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/006.jpg" alt="fiesta_boliche">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/007.jpg" alt="equipamiento_sonido">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/008.jpg" alt="evento_boliche">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/009.jpg" alt="fiesta_noche">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/010.jpg" alt="Luces_ evento">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/011.jpg" alt="evento_corporativo">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/001.jpg" alt="evento social">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/002.jpg" alt="iluminacion fiesta">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/003.jpg" alt="evento empresarial">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/004.jpg" alt="evento corporativo">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/005.jpg" alt="consola de sonido">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/006.jpg" alt="fiesta boliche">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/007.jpg" alt="equipamiento sonido">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/008.jpg" alt="evento boliche">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/009.jpg" alt="fiesta noche">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/010.jpg" alt="Luces evento">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/011.jpg" alt="evento corporativo">
             <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/012.jpg" alt="recital en vivo">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/013.jpg" alt="evento_boliche">
+            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/013.jpg" alt="evento boliche">
             <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/014.jpg" alt="recital">
             <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/015.jpg" alt="Iluminacion en boliche">
             <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/016.jpg" alt="dj evento">
@@ -82,9 +82,9 @@
         <div class="redes__footer">
             <h3>Seguinos</h3>
             <ul>
-                <li><a href="#">Facebook<img src="../asset/image/facebook.png" alt="logo_Facebook"></a></li>
-                <li><a href="#">Instagram<img src="../asset/image/instagram.png" alt="logo_Instagram"></a></li>
-                <li><a href="#">Linkedin<img src="../asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
+                <li><a href="#">Facebook<img src="../asset/image/facebook.png" alt="logo Facebook"></a></li>
+                <li><a href="#">Instagram<img src="../asset/image/instagram.png" alt="logo Instagram"></a></li>
+                <li><a href="#">Linkedin<img src="../asset/image/linkedin.png" alt="logo Linkedin"></a></li>
             </ul>
         </div>
     </footer>
