--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -60,7 +60,7 @@
                     <p class="parrafoServicios">- Proyección de imágenes en pantallas gigantes, Tv Led y pantallas LED interior y exterior.</p>
                     <p class="parrafoServicios">- Sonido e iluminación para inauguraciones de locales, cócteles, celebraciones y fiestas de fin de año.</p>
                 </div>
-                <img class="imgServicios  col-11 col-md-5 " src="../asset/image/evEmpre.jpg" alt="foto_evento_empresarial">
+                <img class="imgServicios  col-11 col-md-5 " src="../asset/image/evEmpre.jpg" alt="foto evento empresarial">
             </div>
             <div class="contenedorServicios flexReverse row  justify-content-center align-items-center" id="sociales">
                 <div class="infoServicios col-12 col-md-5">
@@ -74,7 +74,7 @@
                     <p class="parrafoServicios"> - Proyeccion de Imagenes</p>
                     <p class="parrafoServicios"> - Pista de Baile</p>
                 </div>
-                <img class="imgServicios col-11 col-md-5" src="../asset/image/evSociales.jpg" alt="foto_evento_social">
+                <img class="imgServicios col-11 col-md-5" src="../asset/image/evSociales.jpg" alt="foto evento social">
             </div>
             <div class="contenedorServicios row justify-content-center align-items-center" id="shows"  >
                 <div class="infoServicios col-12 col-md-5 " >
@@ -87,7 +87,7 @@
                     <p class="parrafoServicios">- Técnica para eventos culturales, políticos y deportivos.</p>
                     <p class="parrafoServicios">- Sonido e iluminación para Desfiles de moda. </p>
                 </div>
-                <img class="imgServicios col-11 col-md-5"  src="../asset/image/shows.jpg" alt="foto_show_en_vivo">
+                <img class="imgServicios col-11 col-md-5"  src="../asset/image/shows.jpg" alt="foto show en vivo">
             </div>
             <div class="contenedorServicios flexReverse row justify-content-center align-items-center " id="equipos">
                 <div class="infoServicios col-12 col-md-5">
@@ -100,7 +100,7 @@
                     <h4 class="parrafoServicios">PANTALLAS Y PROYECTORES</h4>
                     <p class="parrafoServicios">Equipamiento para reproducción de imágenes ideales para presentaciones de productos, capacitaciones, conferencias o videos institucionales.</p>
                 </div>
-                <img class="imgServicios col-11 col-md-5" src="../asset/image/alq.jpg" alt="foto_equipos">
+                <img class="imgServicios col-11 col-md-5" src="../asset/image/alq.jpg" alt="foto equipos">
             </div>
         </div>
     </main>
@@ -118,9 +118,9 @@
         <div class="redes__footer">
             <h3>Seguinos</h3>
             <ul>
-                <li><a href="#">Facebook<img src="../asset/image/facebook.png" alt="logo_Facebook"></a></li>
-                <li><a href="#">Instagram<img src="../asset/image/instagram.png" alt="logo_Instagram"></a></li>
-                <li><a href="#">Linkedin<img src="../asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
+                <li><a href="#">Facebook<img src="../asset/image/facebook.png" alt="logo Facebook"></a></li>
+                <li><a href="#">Instagram<img src="../asset/image/instagram.png" alt="logo Instagram"></a></li>
+                <li><a href="#">Linkedin<img src="../asset/image/linkedin.png" alt="logo Linkedin"></a></li>
             </ul>
         </div>
     </footer>
