--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -87,9 +87,9 @@
         <div class="redes__footer">
             <h3>Seguinos</h3>
             <ul>
-                <li><a href="#">Facebook<img src="../asset/image/facebook.png" alt="logo_Facebook"></a></li>
-                <li><a href="#">Instagram<img src="../asset/image/instagram.png" alt="logo_Instagram"></a></li>
-                <li><a href="#">Linkedin<img src="../asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
+                <li><a href="#">Facebook<img src="../asset/image/facebook.png" alt="logo Facebook"></a></li>
+                <li><a href="#">Instagram<img src="../asset/image/instagram.png" alt="logo Instagram"></a></li>
+                <li><a href="#">Linkedin<img src="../asset/image/linkedin.png" alt="logo Linkedin"></a></li>
             </ul>
         </div>
     </footer>
