Agregue SASS a mi proyecto y acomode todo los estilos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg header">
         <div class="container-fluid ">
             <a class="navbar-brand col-4" href="./index.html"><img class="logo" data-aos="fade-right" data-aos-duration="3000"data-aos-delay="300"  src="./asset/image/logo.png" alt="beat sound"></a>
-            <button class="navbar-toggler color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler colorH" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse desplegable text-center" id="navbarNavDropdown">
