Agregue redes al navegador y frase fija arriba del carrusel

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -15,7 +15,7 @@
 <body class="contenedorIndex">
     <nav class="navbar navbar-expand-lg header">
         <div class="container-fluid ">
-            <a class="navbar-brand col-4" href="../index.html"><img class="logo" data-aos="fade-right" data-aos-duration="3000"data-aos-delay="300"  src="../asset/image/logo.png" alt="beat sound"></a>
+            <a class="navbar-brand col-5" href="../index.html"><img class="logo" data-aos="fade-right" data-aos-duration="3000"data-aos-delay="300"  src="../asset/image/logo.png" alt="beat sound"></a>
             <button class="navbar-toggler colorH" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,6 +45,13 @@
                 </ul>
             </div>
         </div>
+        <div class="redes__nav">
+            <ul>
+                <li><a href="#"><img src="../asset/image/facebook.png" alt="logo_Facebook"></a></li>
+                <li><a href="#"><img src="../asset/image/instagram.png" alt="logo_Instagram"></a></li>
+                <li><a href="#"><img src="../asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
+            </ul>
+        </div>    
     </nav>
     <main class="container-fluid">
         <h1 class="tituloGaleria text-center m-4">Una imagen vale mas que mil palabras</h1>
