Agregue etiquetas meta kw y desc. Utilice map, extend y mixin en SASS

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="casamientos bodas dj">
+    <meta name="description" content="Nos avalan más de 25 años de servicios">
     <link rel="shortcut icon" href="../asset/image/logoico.jpg" type="image/x-icon">
     <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -60,11 +62,11 @@
                 <input class="formBox col-10 col-lg-10 m-1 p-1 " type="text" name="nombre" placeholder="Escriba su Nombre" required>
                 <input class="formBox col-10 col-lg-10 m-1 p-1" type="email" name="mail" placeholder=" Escriba su E-mail" required>
                 <input class="formBox col-10 col-lg-10 m-1 p-1" type="text" placeholder="Asunto">
-                <textarea class="formBox col-10 col-lg-10 m-1 p-1" name="text" placeholder="Escriba su consulta"></textarea required>
+                <textarea class="col-10 col-lg-10 m-1 p-1" name="text" placeholder="Escriba su consulta"></textarea required>
                 <input class="formBox col-10 col-lg-10 m-1 p-1" type="submit" value="Enviar">
             </form>
             <div class="infoContactos col-10 col-lg-5 row align-items-center">
-                <h2 class="tituloContactos text-center my-5">CONSULTANOS SIN COMPROMISO</h2>
+                <h1 class="tituloContactos text-center my-5">CONSULTANOS SIN COMPROMISO</h1>
                 <p>Queremos brindarte el mejor servicio, por eso contamos con equipos de calidad y la mejor logística</p>
                 <div class="parrafoContactos my-3">
                     <p >LLAMANOS AL TELEFONO:</p>
@@ -76,7 +78,7 @@
                 </div>
                 <div class="parrafoContactos my-3">
                     <p>HORARIO DE ATENCION</p>
-                    <p>Lunes a Viernes de 9hs a 18hs - Sabados de 9hs a 13hs </p>
+                    <p>Lunes a Viernes de 9hs a 18hs - Sábados de 9hs a 13hs </p>
                 </div>
             </div> 
         </div>
