--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="logistica escenarios recitales">
+    <meta name="description" content="Marcamos la diferencia por la calidad y el compromiso">
     <link rel="shortcut icon" href="../asset/image/logoico.jpg" type="image/x-icon">
     <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -88,14 +90,14 @@
                 <img src="../asset/image/logistica.png" alt="David Lopez">
                 <div class="carasInfo">
                     <h3 class="nombresNosotros">David Lopez</h3>
-                    <p class="infoPersonas"> Logistica</p>
+                    <p class="infoPersonas"> Logística</p>
                 </div>
             </div>
             <div class="imgCaras col-7 col-md-5 col-lg-4">
                 <img src="../asset/image/Sonidista.png" alt="Fabian Gomez">
                 <div class="carasInfo">
                     <h3 class="nombresNosotros">Fabian Gomez</h3>
-                    <p class="infoPersonas"> Sonido e Iluminacion</p>
+                    <p class="infoPersonas"> Sonido e Iluminación</p>
                 </div>
             </div>
         </div>
