--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="show, alquiler, parlantes, microfonos">
+    <meta name="description" content="Llegamos a todo el país llevando la mejor calidad de Servicios">
     <link rel="shortcut icon" href="../asset/image/logoico.jpg" type="image/x-icon">
     <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -77,8 +79,8 @@
                     <p class="parrafoServicios">De eso se trata nuestro trabajo. Y lo más importante: nos encanta hacerlo.</p>
                     <h4 class="parrafoServicios">¿QUE PODEMOS OFRECERTE?</h4>
                     <p class="parrafoServicios"> - Sonido y Musicalización</p>
-                    <p class="parrafoServicios"> - Iluminacion Decorativa</p>
-                    <p class="parrafoServicios"> - Proyeccion de Imagenes</p>
+                    <p class="parrafoServicios"> - Iluminación Decorativa</p>
+                    <p class="parrafoServicios"> - Proyección de Imagenes</p>
                     <p class="parrafoServicios"> - Pista de Baile</p>
                 </div>
                 <img class="imgServicios col-11 col-md-5" src="../asset/image/evSociales.jpg" alt="foto evento social">
