--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="sonido, iluminacion, fiestas, equipos, sociales">
+    <meta name="description" content="En beat Sound encontras todo lo que necesitas para tu próximo Evento.">
     <link rel="shortcut icon" href="./asset/image/logoico.jpg" type="image/x-icon">
     <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -54,7 +56,7 @@
         </div>    
     </nav>
     <main class="container-fluid"> 
-        <h1 class="tituloPrincipal">TODO LO QUE NECESITAS</h1> 
+        <h1 class="tituloPrincipal">TODO PARA TU EVENTO</h1> 
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner imgCarrusel">
                 <div class="carousel-item active">
@@ -89,7 +91,7 @@
                 <img class="card__img" src="./asset/image/luces.png" alt="icono de luces">
                 <div class="card__info">
                     <h3 class="card__info--titulo">ILUMINACION</h3>
-                    <p> Nuestra iluminacion LED brinda el mejor rendimiento y versatilidad, creando ambientaciones con colores brillantes y personalizados.</p>
+                    <p> Nuestra iluminación LED brinda el mejor rendimiento y versatilidad, creando ambientaciones con colores brillantes y personalizados.</p>
                 </div>
             </div>
             <div class="card m-4 col-xl-2 col-lg-4 col-8">
@@ -103,7 +105,7 @@
                 <img class="card__img" src="./asset/image/conversacion.png" alt="icono de asesoramiento">
                 <div class="card__info">
                     <h3 class="card__info--titulo">ASESORAMIENTO</h3>
-                    <p>Contamos con el asesoramiento técnico de profesionales calificados en sonido e iluminación. Te ayudamos a diseñar tu evento y definir qué tipo de equipamiento necesitás para que sea exitoso </p>
+                    <p>Contamos con el asesoramiento técnico de profesionales calificados en sonido e iluminación. Te ayudamos a diseñar tu evento y definir qué tipo de equipamiento necesitas para que sea exitoso </p>
                 </div>
             </div>
         </div>
