agregue link redes sociales y modifique la jerarquia de algunas etiqutas H

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,9 +49,9 @@
         </div>
         <div class="redes__nav">
             <ul>
-                <li><a href="#"><img src="../asset/image/facebook.png" alt="logo_Facebook"></a></li>
-                <li><a href="#"><img src="../asset/image/instagram.png" alt="logo_Instagram"></a></li>
-                <li><a href="#"><img src="../asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="../asset/image/facebook.png" alt="logo_Facebook"></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><img src="../asset/image/instagram.png" alt="logo_Instagram"></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank"><img src="../asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
             </ul>
         </div>    
     </nav>
@@ -96,9 +96,9 @@
         <div class="redes__footer">
             <h3>Seguinos</h3>
             <ul>
-                <li><a href="#">Facebook<img src="../asset/image/facebook.png" alt="logo Facebook"></a></li>
-                <li><a href="#">Instagram<img src="../asset/image/instagram.png" alt="logo Instagram"></a></li>
-                <li><a href="#">Linkedin<img src="../asset/image/linkedin.png" alt="logo Linkedin"></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank">Facebook<img src="../asset/image/facebook.png" alt="logo Facebook"></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank">Instagram<img src="../asset/image/instagram.png" alt="logo Instagram"></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank">Linkedin<img src="../asset/image/linkedin.png" alt="logo Linkedin"></a></li>
             </ul>
         </div>
     </footer>
