--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -49,9 +49,9 @@
         </div>
         <div class="redes__nav">
             <ul>
-                <li><a href="#"><img src="../asset/image/facebook.png" alt="logo_Facebook"></a></li>
-                <li><a href="#"><img src="../asset/image/instagram.png" alt="logo_Instagram"></a></li>
-                <li><a href="#"><img src="../asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="../asset/image/facebook.png" alt="logo_Facebook"></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><img src="../asset/image/instagram.png" alt="logo_Instagram"></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank"><img src="../asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
             </ul>
         </div>    
     </nav>
@@ -63,11 +63,11 @@
                     <p class="parrafoServicios">Ofrecemos un asesoramiento integral, la solución técnica adecuada y el equipamiento ideal
                         para cada evento, con primeras marcas, staff técnico capacitado y un seguimiento personalizado desde el primer contacto.</p>
                     <p class="parrafoServicios">Nuestra misión es que su evento sorprenda a todos por su calidad, y se desarrolle a la perfección.</p>
-                    <h4 class="parrafoServicios">NUESTRO SERVICIO</h4>
+                    <h3 class="titulosH3">NUESTRO SERVICIO</h3>
                     <p class="parrafoServicios">- Técnica para conferencias, congresos, workshops, charlas, seminarios y talleres.</p>
                     <p class="parrafoServicios">- Iluminación y escenográfica de fachadas y edificios, iluminación de stands, showrooms.</p>
                     <p class="parrafoServicios">- Proyección de imágenes en pantallas gigantes, Tv Led y pantallas LED interior y exterior.</p>
-                    <p class="parrafoServicios">- Sonido e iluminación para inauguraciones de locales, cócteles, celebraciones y fiestas de fin de año.</p>
+                    <p class="parrafoServicios mb-5">- Sonido e iluminación para inauguraciones de locales, cócteles, celebraciones y fiestas de fin de año.</p>
                 </div>
                 <img class="imgServicios  col-11 col-md-5 " src="../asset/image/evEmpre.jpg" alt="foto evento empresarial">
             </div>
@@ -77,11 +77,11 @@
                     <p class="parrafoServicios">Una boda al aire libre, una fiesta de 15 con toda la diversión, un cumpleaños especial, una despedida….el evento que te imagines. Brindamos un servicio absolutamente profesional, controlando la calidad de cada detalle.</p>
                     <p class="parrafoServicios">Acompañamos a los protagonistas desde el primer momento, escuchando sus ideas, asesorándolos, buscando juntos la mejor opción para que ese momento sea tal como lo soñaron.</p>
                     <p class="parrafoServicios">De eso se trata nuestro trabajo. Y lo más importante: nos encanta hacerlo.</p>
-                    <h4 class="parrafoServicios">¿QUE PODEMOS OFRECERTE?</h4>
+                    <h3 class="titulosH3">¿QUE PODEMOS OFRECERTE?</h3>
                     <p class="parrafoServicios"> - Sonido y Musicalización</p>
                     <p class="parrafoServicios"> - Iluminación Decorativa</p>
                     <p class="parrafoServicios"> - Proyección de Imagenes</p>
-                    <p class="parrafoServicios"> - Pista de Baile</p>
+                    <p class="parrafoServicios mb-5"> - Pista de Baile</p>
                 </div>
                 <img class="imgServicios col-11 col-md-5" src="../asset/image/evSociales.jpg" alt="foto evento social">
             </div>
@@ -89,12 +89,12 @@
                 <div class="infoServicios col-12 col-md-5 " >
                     <h2 class="tituloServicios"> Show en Vivo</h2>
                     <p class="parrafoServicios">Contamos con equipamiento de todo tipo, y de primera categoría, para cubrir eventos de distintas magnitudes. Nuestros asistentes de escenario, técnicos iluminadores y de sonido estarán a su servicio para controlar cada detalle y lograr un show irrepetible .</p>
-                    <h4 class="parrafoServicios">NOS ESPECIALIZAMOS EN:</h4>
+                    <h3 class="titulosH3">NOS ESPECIALIZAMOS EN:</h3>
                     <p class="parrafoServicios">- Sonido e iluminación para Solistas, bandas, orquestas, festivales, Peñas y eventos al aire libre.
                     </p>
                     <p class="parrafoServicios">- Sonido e iluminación para obras de Teatro, intervenciones artísticas,academias de danza.</p>
                     <p class="parrafoServicios">- Técnica para eventos culturales, políticos y deportivos.</p>
-                    <p class="parrafoServicios">- Sonido e iluminación para Desfiles de moda. </p>
+                    <p class="parrafoServicios mb-5">- Sonido e iluminación para Desfiles de moda. </p>
                 </div>
                 <img class="imgServicios col-11 col-md-5"  src="../asset/image/shows.jpg" alt="foto show en vivo">
             </div>
@@ -102,14 +102,14 @@
                 <div class="infoServicios col-12 col-md-5">
                     <h2 class="tituloServicios"> Alquiler de Equipamiento</h2>
                     <p class="parrafoServicios">Contamos con logística propia y brindamos este servicio a clientes, colegas del rubro y salones que necesiten alquilar equipos de sonido, iluminación y reproducción de imágenes de calidad profesional.</p>
-                    <h4 class="parrafoServicios">SISTEMA DE SONIDO</h4>
+                    <h3 class="titulosH3">SISTEMA DE SONIDO</h3>
                     <p class="parrafoServicios">Alquilamos, instalamos y operamos equipos de sonido profesional para todo tipo de eventos.</p>
-                    <h4 class="parrafoServicios">EQUIPAMIENTO DE ILUMINACION</h4>
+                    <h3 class="titulosH3">EQUIPAMIENTO DE ILUMINACION</h3>
                     <p class="parrafoServicios">Contamos con equipamiento de última generación, potentes y compactos, de fácil instalación para iluminación de fachadas, stands, interior de salones, espacios al aire libre, galerías o pistas de baile.</p>
-                    <h4 class="parrafoServicios">PANTALLAS Y PROYECTORES</h4>
-                    <p class="parrafoServicios">Equipamiento para reproducción de imágenes ideales para presentaciones de productos, capacitaciones, conferencias o videos institucionales.</p>
+                    <h3 class="titulosH3">PANTALLAS Y PROYECTORES</h3>
+                    <p class="parrafoServicios mb-4">Equipamiento para reproducción de imágenes ideales para presentaciones de productos, capacitaciones, conferencias o videos institucionales.</p>
                 </div>
-                <img class="imgServicios col-11 col-md-5" src="../asset/image/alq.jpg" alt="foto equipos">
+                <img class="imgServicios col-11 col-md-5 mb-5" src="../asset/image/alq.jpg" alt="foto equipos">
             </div>
         </div>
     </main>
@@ -127,9 +127,9 @@
         <div class="redes__footer">
             <h3>Seguinos</h3>
             <ul>
-                <li><a href="#">Facebook<img src="../asset/image/facebook.png" alt="logo Facebook"></a></li>
-                <li><a href="#">Instagram<img src="../asset/image/instagram.png" alt="logo Instagram"></a></li>
-                <li><a href="#">Linkedin<img src="../asset/image/linkedin.png" alt="logo Linkedin"></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank">Facebook<img src="../asset/image/facebook.png" alt="logo Facebook"></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank">Instagram<img src="../asset/image/instagram.png" alt="logo Instagram"></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank">Linkedin<img src="../asset/image/linkedin.png" alt="logo Linkedin"></a></li>
             </ul>
         </div>
     </footer>
