--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -49,9 +49,9 @@
         </div>
         <div class="redes__nav">
             <ul>
-                <li><a href="#"><img src="../asset/image/facebook.png" alt="logo_Facebook"></a></li>
-                <li><a href="#"><img src="../asset/image/instagram.png" alt="logo_Instagram"></a></li>
-                <li><a href="#"><img src="../asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="../asset/image/facebook.png" alt="logo_Facebook"></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><img src="../asset/image/instagram.png" alt="logo_Instagram"></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank"><img src="../asset/image/linkedin.png" alt="logo_Linkedin"></a></li>
             </ul>
         </div>    
     </nav>
@@ -76,7 +76,7 @@
             <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/013.jpg" alt="evento boliche">
             <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/014.jpg" alt="recital">
             <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/015.jpg" alt="Iluminacion en boliche">
-            <img class="col-11 my-1 col-sm-5 col-lg-4"  src="..//asset/image/galeria/016.jpg" alt="dj evento">
+            <img class="col-11 my-1 col-sm-5 col-lg-4 mb-4"  src="..//asset/image/galeria/016.jpg" alt="dj evento">
     </main>
     <footer class="footer">
         <div class="contactos__footer">
@@ -91,9 +91,9 @@
         <div class="redes__footer">
             <h3>Seguinos</h3>
             <ul>
-                <li><a href="#">Facebook<img src="../asset/image/facebook.png" alt="logo Facebook"></a></li>
-                <li><a href="#">Instagram<img src="../asset/image/instagram.png" alt="logo Instagram"></a></li>
-                <li><a href="#">Linkedin<img src="../asset/image/linkedin.png" alt="logo Linkedin"></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank">Facebook<img src="../asset/image/facebook.png" alt="logo Facebook"></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank">Instagram<img src="../asset/image/instagram.png" alt="logo Instagram"></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank">Linkedin<img src="../asset/image/linkedin.png" alt="logo Linkedin"></a></li>
             </ul>
         </div>
     </footer>
