Arregle tarjetas index

--- a/index.html
+++ b/index.html
@@ -80,31 +80,31 @@
     </main>
     <section class="sectionIndex">
         <div class="contenedor__tarjetas row justify-content-evenly">
-            <div class="card m-4 col-xl-2 col-lg-4 col-8">
+            <div class="card">
                 <img class="card__img" src="./asset/image/music.png" alt="icono de musica">
                 <div class="card__info">
                     <h3 class="card__info--titulo">SONIDO</h3>
                     <p>Contamos con sistemas de sonido para todo tipo de eventos.</p>
                 </div>
             </div>
-            <div class="card m-4 col-xl-2 col-lg-4 col-8">
+            <div class="card">
                 <img class="card__img" src="./asset/image/luces.png" alt="icono de luces">
                 <div class="card__info">
                     <h3 class="card__info--titulo">ILUMINACION</h3>
                     <p> Nuestra iluminación LED brinda el mejor rendimiento y versatilidad, creando ambientaciones con colores brillantes y personalizados.</p>
                 </div>
             </div>
-            <div class="card m-4 col-xl-2 col-lg-4 col-8">
+            <div class="card">
                 <img class="card__img" src="./asset/image/altoparlante.png" alt="icono de alquiler">
                 <div class="card__info">
                     <h3 class="card__info--titulo">ALQUILER DE EQUIPOS</h3>
                     <p>Brindamos soluciones rápidas, confiables y accesibles.</p>
                 </div>
             </div>
-            <div class="card m-4 col-xl-2 col-lg-4 col-8">
+            <div class="card">
                 <img class="card__img" src="./asset/image/conversacion.png" alt="icono de asesoramiento">
                 <div class="card__info">
-                    <h3 class="card__info--titulo">ASESORAMIENTO</h3>
+                    <h3 class="card__info--titulo">ASISTENCIA PERSONAL</h3>
                     <p>Contamos con el asesoramiento técnico de profesionales calificados en sonido e iluminación. Te ayudamos a diseñar tu evento y definir qué tipo de equipamiento necesitas para que sea exitoso </p>
                 </div>
             </div>
