arregle errores de sintaxis en etiquetas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,7 +67,7 @@
             </form>
             <div class="infoContactos col-10 col-lg-5 row align-items-center">
                 <h1 class="tituloContactos text-center my-5">CONSULTANOS SIN COMPROMISO</h1>
-                <p>Queremos brindarte el mejor servicio, por eso contamos con equipos de calidad y la mejor logística</p>
+                <h2>Queremos brindarte el mejor servicio, por eso contamos con equipos de calidad y la mejor logística</h2>
                 <div class="parrafoContactos my-3">
                     <p >LLAMANOS AL TELEFONO:</p>
                     <p>222-3333-44556</p>
