--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -57,9 +57,9 @@
     </nav>
     <main class="container-fluid">
         <h1 class="tituloGaleria text-center m-4">Una imagen vale mas que mil palabras</h1>
-        <p class="infoGaleria">
+        <h2 class="infoGaleria">
             Nuestra trayectoria de 25 años nos a permitido ser parte de grandes Momentos.
-        </p>
+        </h2>
         <div class="galeria row justify-content-center ">
             <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/001.jpg" alt="evento social">
             <img class="col-11 my-1 col-sm-5 col-lg-4"  src="../asset/image/galeria/002.jpg" alt="iluminacion fiesta">
