--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -56,6 +56,7 @@
         </div>    
     </nav>
     <main class="container-fluid">
+        <h1 class="tituloP">¿QUE PODEMOS OFRECERTE?</h1>
         <div class="contenedorPrincipal">
             <div class="contenedorServicios row d-flex justify-content-center align-items-center ">
                 <div class="infoServicios col-12 col-md-5" >
